# AIGIS

./: .env.example  .gitignore  README.md  pyproject.toml  test.py
docs/: 武汉市GIS智能助手技术设计文档.md
src/aigis_agent/: __init__.py  main.py
src/aigis_agent/api/: router.py
src/aigis_agent/api/routes/: __init__.py  agent.py  health.py  poi.py  routing.py  service_area.py  site_selection.py
src/aigis_agent/core/: config.py
src/aigis_agent/db/: __init__.py  models.py  session.py
src/aigis_agent/schemas/: __init__.py  agent.py  amap_tools.py  poi.py  routing.py  service_area.py  site_selection.py
src/aigis_agent/services/: __init__.py  agent_service.py  agent_tools.py  amap_service.py  graph_service.py  greeting_service.py  isochrone_service.py  nominatim_service.py  osrm_service.py  poi_search_service.py  site_selection_service.py
src/aigis_agent/utils/: __init__.py  geo.py
src/aigis_agent/web/: __init__.py  routes.py
src/aigis_agent/web/static/css/: map.css
src/aigis_agent/web/static/js/: map.js
src/aigis_agent/web/templates/: map.html
src/app/: main.py  mcp_gateway.py  orchestrator.py  policy_wuhan.py  schemas.py
tests/: conftest.py  test_agent_service_planner.py  test_agent_tools.py  test_poi_search_service.py  test_smoke.py
web/: app.css  app.js  index.html
